# F1TenthSim

./: .gitignore  CMakeLists.txt  Findglfw3.cmake  LICENSE  README.md  debug.sh
assets/: viking_room.obj:Zone.Identifier  viking_room.png:Zone.Identifier
assets/shaders/: comp.spv  compile.bat  compile.sh  compute.comp  shader.frag  shader.vert  vert.spv
libs/: vk_mem_alloc.h
src/: Camera.cpp  Camera.h  main.cpp
src/Infinite/: Infinite.cpp  Infinite.h
src/Infinite/backend/: Settings.cpp  Settings.h
src/Infinite/backend/Model/: tiny_obj_loader.h
src/Infinite/backend/Model/Image/: ColorImage.cpp  ColorImage.h  DepthImage.cpp  DepthImage.h  Image.cpp  Image.h  TexturedImage.cpp  TexturedImage.h  sbt_image.h
src/Infinite/backend/Model/Models/: BaseModel.cpp  BaseModel.h  ComputeModel.cpp  ComputeModel.h  DescriptorSet.cpp  DescriptorSet.h  Model.cpp  Model.h
src/Infinite/backend/Model/mapbox/: earcut.hpp
src/Infinite/backend/Rendering/: CommandBuffer.cpp  CommandBuffer.h  Engine.cpp  Engine.h
src/Infinite/backend/Rendering/Queues/: Queue.cpp  Queue.h
src/Infinite/backend/Rendering/RenderPasses/: BasicRenderPass.cpp  BasicRenderPass.h  ComputeRenderPass.cpp  ComputeRenderPass.h  RenderPass.cpp  RenderPass.h
src/Infinite/backend/Software/: App.cpp  App.h  BHV.cpp  BVH.h  ShaderAnalyzer.cpp  ShaderAnalyzer.h  alltogether.cpp  alltogether.h
src/Infinite/frontend/: Camera.cpp  Camera.h  Car.h
src/Infinite/util/: Includes.h  VulkanUtils.cpp  VulkanUtils.h  constants.h
